# eqanalysis

./: .gitignore  LICENSE  README.md  README_2.md  pyproject.toml
.github/: README.md
dashfiles/layouts/: dash_multipage_template.py  fig_template.py  navbar_example.py  trial_upload.py
data/: code_p_df.csv  stations.csv
data/stationwise/: st_1000000.txt  st_1000001.txt  st_1000020.txt  st_1000021.txt  st_1000022.txt  st_1000120.txt  st_1000231.txt  st_1010000.txt  st_1010040.txt  st_1010120.txt  st_1010140.txt  st_1010141.txt  st_1010240.txt  st_1010241.txt  st_1010330.txt  st_1010340.txt  st_1010341.txt  (+6024 more)
data_2024/: code_p_20231205_df.csv  nikkei-225-index-historical-chart-data.numbers
data_download/: Untitled.ipynb
docs_2024/: TODO.md  method_0100_data_preparation.md
intermediates/: est_10110_101919-01-012020-12-31.csv  est_10110_10_1919-01-01_2010-12-31.csv  intensity_D.csv  intensity_DC7.csv  intensity_DCBA765.csv  organized_codes_pre_01.csv  organized_codes_pre_02.csv
results/: intermediate_meta.csv  temp.csv  temp_most_unlikelies.csv
tests/: code_p_test.csv  code_p_test_01_address_only_added.csv  summary_test_intensity_frequency_regression_summary.csv  test_create_stationwise_data.py  test_eqa.py  test_find_intensity_frequency_regression_summarize_detaled.py  test_organize_intensities_duration.py  test_organize_station_2024.py
z_old/: calc_durations_on_organized.py  create_stationwise_dataframe.py  find_latlon_difference_in_the_group.py  intensity_frequency_jpgu.py  power_law_trial.py  trial_calc_duration.py  validation.py  validation_partial.py
(+10754 files in other folders)
